<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_white"
    android:orientation="vertical"
    tools:context="com.mangedha.knit.activities.RegisterActiviy">

    <ImageView style="@style/attrs_backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dim_side_margin"
        android:orientation="vertical">

        <TextView
            style="@style/attrs_register_title"
            android:text="@string/setyournew" />

        <EditText
            style="@style/attrs_register_field"
            android:hint="@string/enternewpass" />

        <EditText
            style="@style/attrs_register_field"
            android:hint="@string/confirm" />

        <TextView
            style="@style/attrs_register_btn"
            android:layout_marginTop="@dimen/dim_textfields_top_margin"
            android:text="@string/save" />

        <TextView
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="click_login"
            android:text="@string/login"
            android:textColor="@color/colorsky"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>
