<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginTop="@dimen/dim_side_margin"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        style="@style/attrs_register_title"
        android:text="@string/forgotyou" />
    <EditText
        style="@style/attrs_register_field"
        android:hint="@string/enterotp"
        android:inputType="number"
        android:layout_marginBottom="4dp"/>
    <TextView
        style="@style/attrs_register_btn"
        android:onClick="click_veryfybtn"
        android:layout_marginTop="@dimen/dim_textfields_top_margin"
        android:text="@string/veryfi" />

    <TextView
        android:id="@+id/ifnotrecieved_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/clr_text"
        android:gravity="center_horizontal"
        android:text="@string/newuser"
        android:textSize="@dimen/dim_textsize" />



</LinearLayout>
