<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginTop="@dimen/dim_side_margin"
    android:orientation="vertical">

    <TextView
        style="@style/attrs_register_title"
        android:text="@string/forgotyou" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3dp"
        android:text="@string/enteryou"
        android:textColor="@color/clr_text"
        android:textSize="@dimen/dim_textsize" />

    <EditText
        style="@style/attrs_register_field"
        android:id="@+id/forgot_password_email"
        android:layout_marginBottom="4dp"
        android:hint="@string/emailaddress"

        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/forgot_password_password_send_button"
        style="@style/attrs_register_btn"
        android:layout_marginTop="@dimen/dim_textfields_top_margin"
        android:text="@string/send" />
</LinearLayout>
