<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_white"
    >

    <ImageView
        android:id="@+id/backarroww"
        android:layout_width="40dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        style="@style/attrs_backarrow"
        android:onClick="click_back"/>


    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/backarroww"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"

            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"

               android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    style="@style/attrs_register_title"
                    android:text="@string/changeyourpass" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="vertical">


                    <com.mangedha.knit.layouts.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="false"
                        android:id="@+id/old_password_layout"
                        style="@style/attrs_register_field_layout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            style="@style/attrs_register_field"
                            android:hint="@string/oldpassword"
                            android:id="@+id/old_password"
                            android:inputType="textPassword" />

                    </com.mangedha.knit.layouts.TextInputLayout>

                    <com.mangedha.knit.layouts.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        style="@style/attrs_register_field_layout"
                        android:layout_marginTop="@dimen/dim_textfields_top_margin"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="false"
                        android:id="@+id/new_password_layout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            style="@style/attrs_register_field"
                            android:hint="@string/newpassword"
                            android:id="@+id/new_password"
                            android:inputType="textPassword" />

                    </com.mangedha.knit.layouts.TextInputLayout>

                    <com.mangedha.knit.layouts.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        style="@style/attrs_register_field_layout"
                        android:layout_marginTop="@dimen/dim_textfields_top_margin"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="false"
                        android:id="@+id/confirm_password_layout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            style="@style/attrs_register_field"
                            android:hint="@string/confirmpassword"
                            android:id="@+id/confirm_password"
                            android:inputType="textPassword" />

                    </com.mangedha.knit.layouts.TextInputLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/password_change_button"
                    style="@style/attrs_register_btn"
                    android:layout_marginTop="@dimen/dim_textfields_top_margin"
                    android:text="@string/done" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
